syntax = "proto3";

package pluginapi.v1;

message Data {
    oneof data {
        string string_val = 1;
        double number_val = 2;
        bool   bool_val   = 3;
        ListData   list_val   = 4;
        MapData    map_val    = 5;
    };
}

message ListData {
    repeated Data value = 1;
}

message MapData {
    map<string, Data> value = 1;
}
